Add commands to FileReader and Datasource.  Update Table and TableManager to...
(cherry picked from commit 8de9e2df0ccddcd09ebc2de894aa98f228391c56)